# housing-AIgency

housing/: README.md  pyproject.toml  report.md
housing/src/housing/: crew.py  main.py
housing/src/housing/config/: agents.yaml  tasks.yaml
housing_aigency/: README.md  pyproject.toml
housing_aigency/src/housing_aigency/: crew.py  main.py
