[project]
name = "housing"
version = "0.1.0"
description = "housing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
housing = "housing.main:run"
run_crew = "housing.main:run"
train = "housing.main:train"
replay = "housing.main:replay"
test = "housing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
